# retraining-database-creation-request

./: .gitignore  README.md  alembic.ini  models.py  populate.py  pyproject.toml  requetes.md  requetes_creation.md
migrations/: env.py
migrations/versions/: 29a54feacd9d_added_lot_in_bien_table.py  340ef9025c19_modification_des_types_char_en_varchar.py  826d889d16ec_remove_adresse.py  9b22dddc60d0_remove_bigint.py  a200b1a91ed9_modification_pour_domtom.py  a9a1e1f18175_remove_code_postal.py  d56be8b7553e_.py  fe35238ce2e3_added_population_to_commune.py
workers/: __init__.py  adresse.py  bien.py  commune.py  departement.py  region.py  type_voie.py  vente.py
